--- a/pages/popup/src/index.css
+++ b/pages/popup/src/index.css
@@ -1,6 +1,19 @@
 @import "@extension/ui/global.css";
 
+html {
+	overflow: hidden;
+}
+
 body {
-	width: 300px;
-	height: 260px;
+	width: 450px;
+	height: 600px;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
+#app-container {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
