--- a/pages/content-runtime/src/matches/example/index.css
+++ b/pages/content-runtime/src/matches/example/index.css
@@ -1,4 +1,4 @@
-@import "@extension/ui/global.css";
+@import "../../../../../packages/ui/lib/global.css";
 
 .ceb-example-runtime-content-view-text {
 	font-size: 20px;
